tests/xy_c_compile_resources/errors/handling1.xy
struct Error {
    code: Int;
}

def to(err: Error, :Bool) err.code != 0;

def unhandled(err: Error) {
    # log the error or something ...
}

def errorProne() -> void | Error {
    error Error{5};
}

def doWork() -> void | Error {
    errorProne();
}

def test1() {
    doWork();
}

def test2() {
    error Error{10};
}